New score to compare edges and embedded relationships